--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"vitest": "^2.0.4"
 	},
 	"dependencies": {
-		"@tailwindcss/typography": "^0.5.15"
+		"@tailwindcss/typography": "^0.5.15",
+		"lucide-svelte": "^0.460.1"
 	}
 }
