--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
     "functions": {
-        "api/**/*.[jt]s": {
+        "api/users/**/*.[jt]s": {
             "runtime": "vercel-deno@3.1.0"
         }
     }
