--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"vite": "^5.0.3"
 	},
 	"dependencies": {
+		"@sveltejs/adapter-vercel": "^5.4.8",
 		"@tailwindcss/typography": "^0.5.15",
 		"lucide-svelte": "^0.461.0"
 	}
